## Change history

### [2019/09/20]
* Added the main Viewport of the Layout, that was deleted in v2.3.0.
* The block description is now loaded and saved to the DXF.
* (fixed) Issue when renaming layouts.
* (fixed) Issue when removing layouts.

### [2019/09/09]
* (fixed) The LinearDimension block that represents the dimension drawing was not generated correctly. Now, the extension lines should not appear crossed under some circumstances.
* (fixed) The MathHelper methods PointInSegment will consider the start and end points as part of the segment.
* (fixed) The MathHelper method NormalizeAngle will not round almost zero angles automatically.

### [2019/08/30]
* (fixed) Hotfix for previous update. The DimensionStyle FitDimLineInside (DIMSOXD value) now is read correctly when it is part of a dimension style override.

### [2019/08/30]
* (fixed) The DimensionStyle FitDimLineInside (DIMSOXD value) was used incorrectly, when it was true is should be false and vice versa.

### [2019/08/16]
* (fixed) When a Block is created form a DxfDocument or DXF file, any Hatch entity that it may contain will have its associative property set to false.
          This will avoid problems when the same entity its associated to multiple hatches, or when any of any of its paths is defined by the intersection of several entities.
* (fixed) When cloning (Clone) a Hatch entity its associative property will be set to false, to avoid problems when the same entity its associated to multiple hatches.
* (fixed) When transforming (TransformBy) a Hatch entity its associative property will be set to false, to avoid problems when the same entity its associated to multiple hatches.

### [2019/08/12]
* (fixed) Fixed a few issues with the tolerances display method in the dimension style and its equivalent override. 

### [2019/07/01]
* Added Swap method to the MathHelper class.
* (fixed) Issue with LinearDimension entities related to its rotation, when the were loaded from a DXF file.