@@ -345,7 +345,7 @@ namespace netDxf.Entities
         /// <summary>
         /// Calculate the dimension reference points.
         /// </summary>
-        protected override void CalculteReferencePoints()
+        protected override void CalculateReferencePoints()
         {
             Vector2 dir1 = this.start - this.center;
             Vector2 dir2 = this.end - this.center;
