@@ -284,7 +284,7 @@ namespace netDxf.Entities
         /// <summary>
         /// Calculate the dimension reference points.
         /// </summary>
-        protected override void CalculteReferencePoints()
+        protected override void CalculateReferencePoints()
         {
             if(Vector2.Equals(this.center, this.refPoint))
                 throw new ArgumentException("The center and the reference point cannot be the same");
