@@ -1,5 +1,11 @@
 ## Change history
 
+
+### [2019/12/19]
+*(fixed) Error when trying to copy to clipboard inside AutoCAD for DXF files saved with netDXF that contains the header variables $INTERFEREOBJVS and $INTERFEREVPVS, since this variables refer to visual style information that netDxf does not save. This variables will not be loaded in case they appear in a DXF.
+*(fixed) After loading a DXF the layouts associated blocks will be renamed to strictly follow *Paper_Space, *Paper_Space0, *Paper_Space1,... 
+*(fixed) Transforming an ellipse might not show the correct result under special circumstances.
+
 ### [2019/09/20]
 * Added the main Viewport of the Layout, that was deleted in v2.3.0.
 * The block description is now loaded and saved to the DXF.
